tests/invalid/tricky_assert.err_exp
tricky_assert.m:010: In interface for module `tricky_assert':
tricky_assert.m:010:   error: this exported promise refers to predicate
tricky_assert.m:010:   [38;5;87m`tricky_assert.local'/0[39;49m, which is [38;5;203mnot exported[39;49m from
tricky_assert.m:010:   module `tricky_assert'.
tricky_assert.m:010:   Either move the promise into the implementation section,
tricky_assert.m:010:   or move the definition into the interface.
